# aoc-code

./: .gitignore  2015-19-notes.txt  Makefile  README.md  Template.hs  fourmolu.yaml  golden-test-fast-hs.sh  hie.yaml  package.yaml  profile_24.txt  pyproject.toml  ratings.csv  ratings.xlsx  requirements.txt  setup.cfg  t
good/: 2019_01.txt  2019_02.txt  2019_04.txt  2019_05.txt  2019_07.txt  2019_08.txt  2019_09.txt  2019_10.txt  2020-03.txt  2020_05.txt  2020_08.txt  2020_11.txt  2020_13.txt  2020_14.txt  2020_15.txt  2020_16.txt  2020_17.txt  2020_19.txt  2020_20.txt  day01.txt  day02.txt
haskell/: Makefile  README.md  Template.hs  aoc.hs  aoc_2015_01.hs  aoc_2018_01.hs  aoc_2018_02.hs  aoc_2018_03.hs  aoc_2018_04.hs  aoc_2018_05.hs  aoc_2018_06.hs  aoc_2018_07.hs  aoc_2018_08.hs  aoc_2018_09.hs  aoc_2018_10.hs  aoc_2018_11.hs  aoc_2018_12.hs  aoc_2018_13.hs  aoc_2018_14.hs  aoc_2018_15.hs  aoc_2018_16.hs  aoc_2018_17.hs  aoc_2018_18.hs  aoc_2018_19.hs  aoc_2018_20.hs  aoc_2018_23.hs  aoc_2018_24.hs  aoc_2018_25.hs  devbox.json  doctest.hs  package.yaml
haskell/app/: Main.hs
haskell/src/: AOC_2015_03.hs  AOC_2015_04.hs  AOC_2015_05.hs  AOC_2015_08.hs  AOC_2015_10.hs  AOC_2015_11.hs  AOC_2015_12.hs  AOC_2015_13.hs  AOC_2015_14.hs  AOC_2015_16.hs  AOC_2015_18.hs  AOC_2018_01.hs  AOC_2018_03.hs  AOC_2018_05.hs  AOC_2018_07.hs  AOC_2018_08.hs  AOC_2018_11.hs  AOC_2018_14.hs  AOC_2018_17.hs  AOC_2018_19.hs  AOC_2018_20.hs  AOC_2018_21.hs  AOC_2018_22.hs  AOC_2021_04.hs  AOC_2021_05.hs  AOC_2021_08.hs  AOC_2021_18.hs  Search.hs  Utilities.hs  aoc_2015_01.hs
haskell/test/: AOC_2015_01_Test.hs  AOC_2015_07_Test.hs  AOC_2015_08_Test.hs  AOC_2015_10_Test.hs  AOC_2015_15_Test.hs  AOC_2015_17_Test.hs  AOC_2015_18_Test.hs  AOC_2015_19_Test.hs  AOC_2018_22_Test.hs  AOC_2021_06_Test.hs  AOC_2021_16_Test.hs  AOC_2021_18_Test.hs  Driver.hs  Search_Test.hs
hs-app/: Main.hs
hs-src/: AOC_2015_02.hs  AOC_2015_03.hs  AOC_2015_04.hs  AOC_2015_05.hs  AOC_2015_06.hs  AOC_2015_07.hs  AOC_2015_08.hs  AOC_2015_09.hs  AOC_2015_10.hs  AOC_2015_11.hs  AOC_2015_15.hs  AOC_2015_17.hs  AOC_2015_19.hs  AOC_2015_20.hs  AOC_2018_01.hs  AOC_2018_02.hs  AOC_2018_03.hs  AOC_2018_04.hs  AOC_2018_05.hs  AOC_2018_06.hs  AOC_2018_09.hs  AOC_2018_10.hs  AOC_2018_12.hs  AOC_2018_13.hs  AOC_2018_15.hs  AOC_2018_16.hs  AOC_2018_18.hs  AOC_2018_19.hs  AOC_2018_20.hs  AOC_2018_22.hs  AOC_2018_23.hs  AOC_2018_24.hs  AOC_2018_25.hs  AOC_2021_01.hs  AOC_2021_02.hs  AOC_2021_03.hs  AOC_2021_04.hs  AOC_2021_06.hs  AOC_2021_07.hs  AOC_2021_08.hs  (+18 more)
hs-test/: AOC_2015_02_Test.hs  AOC_2015_03_Test.hs  AOC_2015_04_Test.hs  AOC_2015_05_Test.hs  AOC_2015_06_Test.hs  AOC_2015_07_Test.hs  AOC_2015_08_Test.hs  AOC_2015_09_Test.hs  AOC_2015_11_Test.hs  AOC_2015_12_Test.hs  AOC_2015_13_Test.hs  AOC_2015_14_Test.hs  AOC_2015_17_Test.hs  AOC_2015_20_Test.hs  AOC_2018_22_Test.hs  AOC_2018_23_Test.hs  AOC_2021_02_Test.hs  AOC_2021_04_Test.hs  AOC_2021_06_Test.hs  AOC_2021_16_Test.hs  AOC_2021_18_Test.hs  AOC_2021_24_Test.hs  Golden_Test.hs  Search_Test.hs  doctest.hs
julia/: 2021_01.jl  2021_03.jl  2021_04.jl  2021_06.jl  2021_07.jl
notes/: 2015-19-notes.txt  2021_24_decompile.txt
others/R-2017/: day01.R  day02.R  day06.R
others/R-2017/exec/: day02_run.R  day08_run.R  day09_run.R  day10_run.R  run_all.sh
others/R-2017/tests/: testthat.R
others/R-2017/tests/testthat/: test_day02.R  test_day04.R  test_day08.R  test_day09.R  test_day10.R  test_day11.R
others/R/2017/: day03.R  day04.R  day05.R  day07.R  day08.R  day09.R  day10.R  day11.R
others/R/2017/exec/: day01_run.R  day03_run.R  day04_run.R  day05_run.R  day06_run.R  day07_run.R  day11_run.R
others/R/2017/tests/testthat/: test_day01.R  test_day03.R  test_day05.R  test_day06.R  test_day07.R
others/julia/: 2021_02.jl  2021_05.jl
others/racket/: Makefile
others/racket/2024/: Makefile  rkt_2024_01.rkt
others/racket/src/: rkt_2018_01.rkt  rkt_2018_02.rkt  rkt_2018_03.rkt  rkt_2018_04.rkt  rkt_2018_05.rkt  rkt_2024_01.rkt
others/zig/: Makefile  README.md  build.zig
others/zig/src/: aoc_2022_01.zig  aoc_2022_02.zig  aoc_2022_03.zig  aoc_2022_04.zig  aoc_2022_05.zig  aoc_2022_06.zig  aoc_2022_07.zig  aoc_2022_08.zig  aoc_2022_09.zig  aoc_2022_10.zig  aoc_2022_11.zig  aoc_2022_12.zig  aoc_2022_13.zig  aoc_2022_14.zig  aoc_2022_15.zig  coord.zig  queue.zig  rw.zig
python/: .gitignore  2020-01.py  2020-03.py  Coord.py  IntCode.py  Makefile  README.md  aoc_2019_01.py  aoc_2019_02.py  aoc_2019_03.py  aoc_2019_04.py  aoc_2019_05.py  aoc_2019_06.py  aoc_2019_07.py  aoc_2019_08.py  aoc_2019_09.py  aoc_2019_10.py  aoc_2019_11.py  aoc_2019_12.py  aoc_2019_13.py  aoc_2019_14.py  aoc_2019_15.py  aoc_2019_16.py  aoc_2019_17.py  aoc_2019_18.py  aoc_2020_01.py  aoc_2020_02.py  aoc_2020_03.py  aoc_2020_04.py  aoc_2020_05.py  aoc_2020_06.py  aoc_2020_07.py  aoc_2020_08.py  aoc_2020_09.py  aoc_2020_10.py  aoc_2020_11.py  aoc_2020_12.py  aoc_2020_13.py  aoc_2020_14.py  aoc_2020_15.py  (+66 more)
python/src/: aoc_2019_01.py  aoc_2019_02.py  aoc_2019_03.py  aoc_2019_04.py  aoc_2019_05.py  aoc_2019_06.py  aoc_2019_07.py  aoc_2019_08.py  aoc_2019_09.py  aoc_2019_10.py  aoc_2019_11.py  aoc_2019_12.py  aoc_2019_13.py  aoc_2019_14.py  aoc_2019_15.py  aoc_2019_16.py  aoc_2019_17.py  aoc_2019_18.py  aoc_2020_01.py  aoc_2020_03.py  aoc_2020_04.py  aoc_2020_05.py  aoc_2020_06.py  aoc_2020_07.py  aoc_2020_09.py  aoc_2020_10.py  aoc_2020_11.py  aoc_2020_12.py  aoc_2020_13.py  aoc_2020_14.py  aoc_2020_15.py  aoc_2020_16.py  aoc_2020_17.py  aoc_2020_18.py  aoc_2020_19.py  aoc_2020_20.py  aoc_2020_21.py  aoc_2020_22.py  aoc_2020_23.py  aoc_2020_24.py  (+83 more)
racket/: Makefile
racket/src/: aoc_2018_04.rkt  aoc_2018_05.rkt  aoc_2024_01.rhm  aoc_2025_01.rkt  rkt_2018_01.rkt  rkt_2018_02.rkt  rkt_2018_03.rkt  rkt_2024_01.rkt
rust/: .gitignore  Cargo.toml  Makefile  README.md  devbox.json  template.rs
rust/src/: lib.rs
src/: day01.py  day02.py
