[tool.poetry]
authors = ["JW <jw1200@gmail.com>"]
description = "Python solutions for Advent of Code"
name = "aoc-code"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.2"
python = ">=3.10.0,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-import-order = "^0.18.2"
flake8-use-fstring = "^1.4"
mypy = "^0.991"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
