[tool.poetry]
authors = ["JW <jw1200@gmail.com>"]
description = "Python solutions for Advent of Code"
name = "aoc-code"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.2"
python = ">=3.10.0,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pylint = "^2.15.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
# Turn on all the flags enabled by --strict
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
# Extras
disallow_any_unimported = true
strict_equality = true
# Don't show success message at the end
no_error_summary = true

[tool.pylint]
# Allow single character lower case names with optional digit for names
enable = "all"
good-names = ["up", "op"]
good-names-rgxs = [
  "^[a-z][0-9]?$",
  "^[a-z]s$",
]

disable = ["unnecessary-lambda-assignment"]
