[tool.poetry]
authors = ["JW <jw1200@gmail.com>"]
description = "Python solutions for Advent of Code"
name = "aoc-code"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.2"
python = ">=3.11.0,<4.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pylint = "^2.15.9"
pyright = "^1.1.286"
ruff = "^0.0.209"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.pylint]
# Allow single character lower case names with optional digit for names
enable = "all"
good-names = ["up", "op"]
good-names-rgxs = [
  "^[a-z][0-9]?$",
  "^[a-z]s$",
]

disable = [
  "I0011", # don't report when we disable a check in the code
  "I0020", # don't report when we suppress a message in the code
  "unnecessary-lambda-assignment",
]

[tool.pylint.design]
# Maximum number of arguments for function / method. (default is 5)
max-args = 8

# Maximum number of attributes for a class (see R0902). (default is 7)
max-attributes = 12

# Maximum number of locals for function / method body. (default is 15)
max-locals = 25

# Minimum number of public methods for a class (see R0903). (default is 2)
min-public-methods = 1


[tool.pyright]
include = ["python"]
exclude = ["**/__pycache__"]
strict = ["python"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
verboseOutput = false

[tool.ruff]
# Never enforce `E501` (line length violations) or synatx errors (mostly due to not
# supporting match
ignore = ["E501", "E999"]

