[tool.poetry]
name = "aoc-code-python"
version = "0.1.0"
description = "Python solutions for Advent of Code"
authors = ["Joe Watson <jw120@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.pylint]
max-args = 6 # (Default is 5)
max-branches = 15 # (Default is 12)

[tool.ruff.lint]
preview = true
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
    # flake8-boolean-trap
    "FBT",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-future-annotations
    "FA",
    # flake8-logging
    "LOG",
    # flake8-pie
    "PIE",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-type-checking
    "TCH",
    # flake8-unused-arguments
    "ARG",
    # Pylint
    "PL",
    # Refurb
    "FURB",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # line-lengths
    "E501",
    # don't disallow blank line after function docstring
    "D202",
    # one-blank-line-before-class (clashes with D211)
    "D203",
    # multi-line-summary-second-line (clashes with D212)
    "D213",
    # missing-type-self (unnecessary)
    "ANN101",
    # undocumented-public-init, -magic-method (not needed)
    "D107",
    "D105",
    # magic-value-comparison
    "PLR2004",
    # whitespace-before-punctuation (clashes with format)
    "E203",
]